--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <div class="skills">
       <h2 class="myskills">About Me.</h2>
       <div class="skill-row1">
-        <img class="coding-img" src="https://cdn-icons.flaticon.com/png/512/4260/premium/4260895.png?token=exp=1659029451~hmac=53d21339935949c8502917bf9e286782" alt="coding-img">
+        <img class="coding-img" src="https://www.flaticon.com/premium-icon/pencil_2444286?term=skills&page=1&position=15&page=1&position=15&related_id=2444286&origin=search" alt="coding-img">
         <h3>Skills</h3>
         <p>I completed Smartcademy Digital Marketing Course achieving Distinction.</p>
       </div>
       <div class="skill-row2">
-        <img class="tate-img" src="https://c.tenor.com/2KM2XiU1DfIAAAAd/andrew-tate-tate.gif" alt="tate-img">
+        <img class="tate-img" src="https://www.flaticon.com/free-icon/experience_4185758?term=experience&page=1&position=17&page=1&position=17&related_id=4185758&origin=search">
         <h3>Experience</h3>
         <p>1. I was a Business Consultant intern at Eben Consultants where I got certificate of Service Innovation.</p>
         <p>2. Organised a Financial Literacy Seminar for Montfort Secondary School Students under the NTU Econs Society.</p>
@@ -46,13 +46,13 @@
         <p>4. I was Business Management Team Head for NTU Hall 8 Dinner and Dance Committee.</p>
       </div>
       <div class="skill-row3">
-        <img class="tate-img" src="https://c.tenor.com/2KM2XiU1DfIAAAAd/andrew-tate-tate.gif" alt="tate-img">
+        <img class="tate-img" src="https://www.flaticon.com/premium-icon/medal_5057005?term=achievements&page=1&position=32&page=1&position=32&related_id=5057005&origin=search" alt="tate-img">
         <h3>Achievements</h3>
         <p>1. Won second runner up at NTU Campcode Hackathon where we pitched a comprehensive viral marketing strategy.</p>
         <p>2. I Was Honorary General Secretary for NTU Economics Sub Club</p>
       </div>
       <div class="skill-row4">
-        <img class="tate-img" src="https://c.tenor.com/2KM2XiU1DfIAAAAd/andrew-tate-tate.gif" alt="tate-img">
+        <img class="tate-img" src="https://giphy.com/gifs/rickandmorty-season-1-adult-swim-rick-and-morty-jsN192JGdyWvS1gqTb" alt="tate-img">
         <h3>Something interesting...</h3>
         <p>1. I launched a Bubble Tea Franchise Business under the Each A Cup Group at 19 years old, managing everything from finances, employees, administrations, operations, etc.</p>
         <p>2. I love finance.</p>
