--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p>4. I was Business Management Team Head for NTU Hall 8 Dinner and Dance Committee.</p>
       </div>
       <div class="skill-row3">
-        <img class="tate-img" src="https://www.flaticon.com/premium-icon/medal_5057005?term=achievements&page=1&position=32&page=1&position=32&related_id=5057005&origin=search" alt="tate-img">
+        <img class="tate-img" src="https://www.flaticon.com/free-icons/achievement" alt="tate-img">
         <h3>Achievements</h3>
         <p>1. Won second runner up at NTU Campcode Hackathon where we pitched a comprehensive viral marketing strategy.</p>
         <p>2. I Was Honorary General Secretary for NTU Economics Sub Club</p>
