--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="skills">
       <h2 class="myskills">About Me.</h2>
       <div class="skill-row1">
-        <img class="coding-img" src="https://www.flaticon.com/premium-icon/pencil_2444286?term=skills&page=1&position=15&page=1&position=15&related_id=2444286&origin=search" alt="coding-img">
+        <img class="coding-img" src="https://www.flaticon.com/premium-icon/pencil_2444286?term=skills&page=1&position=15&page=1&position=15&related_id=2444286&origin=search" alt="skills-img">
         <h3>Skills</h3>
         <p>I completed Smartcademy Digital Marketing Course achieving Distinction.</p>
       </div>
@@ -46,13 +46,13 @@
         <p>4. I was Business Management Team Head for NTU Hall 8 Dinner and Dance Committee.</p>
       </div>
       <div class="skill-row3">
-        <img class="tate-img" src="https://www.flaticon.com/free-icons/achievement" alt="tate-img">
+        <img class="tate-img" src="https://www.flaticon.com/premium-icon/medal_5057005?term=achievements&page=1&position=32&page=1&position=32&related_id=5057005&origin=search" alt="tate-img">
         <h3>Achievements</h3>
         <p>1. Won second runner up at NTU Campcode Hackathon where we pitched a comprehensive viral marketing strategy.</p>
         <p>2. I Was Honorary General Secretary for NTU Economics Sub Club</p>
       </div>
       <div class="skill-row4">
-        <img class="tate-img" src="https://giphy.com/gifs/rickandmorty-season-1-adult-swim-rick-and-morty-jsN192JGdyWvS1gqTb" alt="tate-img">
+        <img class="tate-img" src="https://media3.giphy.com/media/jsN192JGdyWvS1gqTb/giphy.gif?cid=6c09b95277e69e6c9818fd2e3a6c8a24e73aafe6ccd14eb4&rid=giphy.gif&ct=g" alt="tate-img">
         <h3>Something interesting...</h3>
         <p>1. I launched a Bubble Tea Franchise Business under the Each A Cup Group at 19 years old, managing everything from finances, employees, administrations, operations, etc.</p>
         <p>2. I love finance.</p>
