--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <div class="skills">
       <h2 class="myskills">About Me.</h2>
       <div class="skill-row1">
-        <img class="coding-img" src="https://www.flaticon.com/premium-icon/pencil_2444286?term=skills&page=1&position=15&page=1&position=15&related_id=2444286&origin=search" alt="skills-img">
+        <img class="coding-img" src="https://media1.giphy.com/media/BvjoYFizIt5yU/giphy.gif?cid=6c09b9528b723289e9a17425eadd2020371181665ef4f187&rid=giphy.gif&ct=g" alt="skills-img">
         <h3>Skills</h3>
         <p>I completed Smartcademy Digital Marketing Course achieving Distinction.</p>
       </div>
       <div class="skill-row2">
-        <img class="tate-img" src="https://www.flaticon.com/free-icon/experience_4185758?term=experience&page=1&position=17&page=1&position=17&related_id=4185758&origin=search">
+        <img class="tate-img" src="https://media4.giphy.com/media/PlnQNcQ4RYOhG/giphy.gif?cid=6c09b952d8fcd59f7269e4c9837ea9e6a452aa44cb0a9aff&rid=giphy.gif&ct=g">
         <h3>Experience</h3>
         <p>1. I was a Business Consultant intern at Eben Consultants where I got certificate of Service Innovation.</p>
         <p>2. Organised a Financial Literacy Seminar for Montfort Secondary School Students under the NTU Econs Society.</p>
@@ -46,7 +46,7 @@
         <p>4. I was Business Management Team Head for NTU Hall 8 Dinner and Dance Committee.</p>
       </div>
       <div class="skill-row3">
-        <img class="tate-img" src="https://www.flaticon.com/premium-icon/medal_5057005?term=achievements&page=1&position=32&page=1&position=32&related_id=5057005&origin=search" alt="tate-img">
+        <img class="tate-img" src="https://media4.giphy.com/media/KY5niCDWQnZg7cD1oK/giphy.gif?cid=6c09b952838f4b331909c640873bcbe20e0f786053317f70&rid=giphy.gif&ct=g" alt="tate-img">
         <h3>Achievements</h3>
         <p>1. Won second runner up at NTU Campcode Hackathon where we pitched a comprehensive viral marketing strategy.</p>
         <p>2. I Was Honorary General Secretary for NTU Economics Sub Club</p>
